# loppis_web

./: .gitignore  Cargo.toml  README.md  index.html
src/: lib.rs  main.css  main.rs
src/component/: mod.rs
src/component/atoms/: colored_button.rs  mod.rs  text_input.rs
src/component/molecules/: custom_form.rs  item_list.rs  mod.rs  previous_sales.rs  submit_button.rs  sum_display.rs
src/component/organisms/: input_grid.rs  list_grid.rs  mod.rs
src/component/pages/: main_page.rs
